--- a/nib.html
+++ b/nib.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Natvity in Bits</title>
+        <title>Nativity in Bits</title>
     </head>
     <body id="body">
     <script src="./scripts/jquery-3.1.1.js"></script>
