--- a/nib.html
+++ b/nib.html
@@ -4,6 +4,26 @@
         <title>Nativity in Bits</title>
     </head>
     <body id="body">
+        <table>
+            <tr>
+                <td>
+                    Type:
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="pc" checked/>PC
+                </td>
+                <td>
+                    <input type="checkbox" id="npc"/>NPC
+                </td>
+            </tr>
+        </table>
+        <br>
+        <button id="generate">Generate</button>
+        <br>
+        <br>
+        <div id="character"></div>
     <script src="./scripts/jquery-3.1.1.js"></script>
     <script src="./scripts/nib.js"></script>
     </body>
