--- a/nib.html
+++ b/nib.html
@@ -20,6 +20,98 @@
             </tr>
         </table>
         <br>
+        <br>
+        <table>
+            <tr>
+                <td>
+                    Setting:
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="generic" checked/>generic
+                </td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="birthright"/>Birthright
+                </td>
+                <td>
+                    <input type="checkbox" id="blackmoor"/>Blackmoor
+                </td>
+                <td>
+                    <input type="checkbox" id="council"/>Council of Wyrms
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="dark"/>Dark Sun
+                </td>
+                <td>
+                    <input type="checkbox" id="fist"/>Dragon Fist
+                </td>
+                <td>
+                    <input type="checkbox" id="dragonlance"/>Dragonlance
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="eberron"/>Eberron
+                </td>
+                <td>
+                    <input type="checkbox" id="realms"/>Forgotten Realms
+                </td>
+                <td>
+                    <input type="checkbox" id="ghostwalk"/>Ghostwalk
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="greyhawk"/>Greyhawk
+                </td>
+                <td>
+                    <input type="checkbox" id="jakandor"/>Jakandor
+                </td>
+                <td>
+                    <input type="checkbox" id="lankhmar"/>Lankhmar
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="mahasarpa"/>Mahasarpa
+                </td>
+                <td>
+                    <input type="checkbox" id="mystara"/>Mystara
+                </td>
+                <td>
+                    <input type="checkbox" id="pelinore"/>Pelinore
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="planescape"/>Planescape
+                </td>
+                <td>
+                    <input type="checkbox" id="ravenloft"/>Ravenloft
+                </td>
+                <td>
+                    <input type="checkbox" id="rokugan"/>Rokugan
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" id="spelljammer"/>Spelljammer
+                </td>
+                <td>
+                    <input type="checkbox" id="warcraft"/>Warcraft
+                </td>
+                <td>
+                    <input type="checkbox" id="wilderlands"/>Wilderlands of High Fantasy
+                </td>
+            </tr>
+        </table>
+        <br>
         <button id="generate">Generate</button>
         <br>
         <br>
