--- a/nib.html
+++ b/nib.html
@@ -74,38 +74,45 @@
                     <input type="checkbox" id="jakandor"/>Jakandor
                 </td>
                 <td>
-                    <input type="checkbox" id="lankhmar"/>Lankhmar
+                    <input type="checkbox" id="kalamar"/>Kingdom of Kalamar
                 </td>
             </tr>
             <tr>
+                <td>
+                    <input type="checkbox" id="lankhmar"/>Lankhmar
+                </td>
                 <td>
                     <input type="checkbox" id="mahasarpa"/>Mahasarpa
                 </td>
                 <td>
                     <input type="checkbox" id="mystara"/>Mystara
                 </td>
+            </tr>
+            <tr>
                 <td>
                     <input type="checkbox" id="pelinore"/>Pelinore
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <input type="checkbox" id="planescape"/>Planescape
                 </td>
                 <td>
                     <input type="checkbox" id="ravenloft"/>Ravenloft
                 </td>
+            </tr>
+            <tr>
                 <td>
                     <input type="checkbox" id="rokugan"/>Rokugan
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <input type="checkbox" id="spelljammer"/>Spelljammer
                 </td>
                 <td>
                     <input type="checkbox" id="warcraft"/>Warcraft
                 </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td>
                     <input type="checkbox" id="wilderlands"/>Wilderlands of High Fantasy
                 </td>
