--- a/nib.html
+++ b/nib.html
@@ -74,7 +74,7 @@
                     <input type="checkbox" id="jakandor"/>Jakandor
                 </td>
                 <td>
-                    <input type="checkbox" id="kalamar"/>Kingdom of Kalamar
+                    <input type="checkbox" id="kalamar"/>Kingdoms of Kalamar
                 </td>
             </tr>
             <tr>
